fixed some alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ nav img:hover {
   border-radius: 10px;
   font-size: 20px;
   font-weight: 500;
+  text-align: center;
 }
 
 .searchBar input:focus {
@@ -117,8 +118,7 @@ nav img:hover {
 }
 
 .mealTile img {
-  max-width: 30%;
-  height: auto;
+  width: 70%;
   margin-bottom: 5px;
   border-radius: 50%;
 }
@@ -135,5 +135,16 @@ nav img:hover {
 }
 
 .mealGallary .bookmark-button:hover {
+  cursor: pointer;
+}
+
+.close-button {
+  position: absolute;
+  font-size: 30px;
+  left: 20px;
+  top: 25%;
+}
+
+.close-button:hover {
   cursor: pointer;
 }
